# rust-gbq-webapp

./: .gitignore  Cargo.toml  readme.md
data/: notes.db
src/: about.rs  counter.rs  display.rs  gbq.rs  main.rs  sql.rs  utils.rs
