[package]
name = "noter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp-bigquery-client = "0.16.8"
serde = "1.0.164"
yew = { version = "0.20.0", features = ["csr"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
serde_json = "1.0.97"
