[package]
name = "noter"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp-bigquery-client = "0.16.8"
wasm-bindgen-futures = "0.4.37"
serde = "1.0.164"
yew = { version = "0.20.0", features = ["csr"] }
serde_json = "1.0.97"
wasm-bindgen = "0.2.87"
