[package]
name = "noter"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.164"
yew = { version = "0.20.0", features = ["csr"] }
serde_json = "1.0.97"
rusqlite = { version = "0.29.0", path = "../rusqlite/compile-wasm32-wasi", features = ["bundled", "wasm32-wasi-vfs"] }
